# DinoMoney

./: .cursorrules  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  Untitled  input.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: db.ts
src/assets/image/: image1.avif  image2.avif  image3.avif  profile.avif
src/components/: AmbientSound.tsx  AppInfo.tsx  AuthOverlay.tsx  CalendarView.tsx  CategoryManager.tsx  Dashboard.tsx  DinoIcon.tsx  FocusTimer.tsx  GoldManager.tsx  KanbanBoard.tsx  LoginScreen.tsx  MiniDatePicker.tsx  ProductivityReport.tsx  Sidebar.tsx  SoundMixer.tsx  Statistics.tsx  StickyNotes.tsx  TopBar.tsx  TransactionManager.tsx  UserProfile.tsx  WalletManager.tsx  WallpaperSelector.tsx
src/services/: db.ts
src/store/: useStore.ts
