[package]
name = "dino-focus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dino_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.2.1", features = [] }
tauri-plugin-opener = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- THÊM DÒNG NÀY ---
# Plugin SQL hỗ trợ SQLite
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
